--- a/app/src/main/res/layout/activity_add_post.xml
+++ b/app/src/main/res/layout/activity_add_post.xml
@@ -33,7 +33,8 @@
             android:layout_marginEnd="20dp"
             android:layout_gravity="end"
             android:layout_marginTop="20dp"
-            android:text="submit"/>
+            android:text="submit"
+            android:backgroundTint="#4cadc7"/>
 
     </LinearLayout>
 
