--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -12,11 +12,19 @@
         android:gravity="center"
         android:orientation="vertical">
 
+        <ImageView
+            android:id="@+id/imageView4"
+            android:layout_width="201dp"
+            android:layout_height="103dp"
+            app:srcCompat="@drawable/applogo_rmv"/>
+
+
         <EditText
             android:id="@+id/userName"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_marginTop="20dp"
             android:hint="User Name"/>
 
         <EditText
@@ -33,7 +41,8 @@
             android:layout_height="48dp"
             android:layout_gravity="center"
             android:layout_marginTop="20dp"
-            android:text="Log In"/>
+            android:text="Log In"
+            android:backgroundTint="#4cadc7"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -47,7 +56,10 @@
             android:layout_width="200dp"
             android:layout_height="40dp"
             android:layout_gravity="center"
-            android:text="Create Account"/>
+            android:text="Create Account"
+            android:backgroundTint="#4cadc7"/>
+
+
 
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
