--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -12,11 +12,18 @@
         android:orientation="vertical"
         android:gravity="center">
 
+        <ImageView
+            android:id="@+id/imageView4"
+            android:layout_width="201dp"
+            android:layout_height="103dp"
+            app:srcCompat="@drawable/applogo_rmv"/>
+
         <EditText
             android:id="@+id/userName"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_marginTop="20dp"
             android:hint="User Name"/>
 
         <EditText
@@ -33,7 +40,8 @@
             android:layout_height="48dp"
             android:layout_gravity="center"
             android:layout_marginTop="20dp"
-            android:text="Register"/>
+            android:text="Register"
+            android:backgroundTint="#4cadc7"/>
 
     </LinearLayout>
 
