--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -32,7 +32,15 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="20dp"
-            android:hint="Password"/>
+            android:hint="Password"
+            android:inputType="textPassword"/>
+
+        <CheckBox
+            android:id="@+id/showHideBox"
+            android:layout_width="200dp"
+            android:layout_height="19dp"
+            android:layout_gravity="center"
+            android:hint="Show Password"/>
 
         <Button
             android:id="@+id/regButton"
